feat: html semantico

--- a/test1.html
+++ b/test1.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <div>
-      Este é um exemplo de HTML corretamente formatado.
+      Este &eacute; um exemplo de HTML corretamente formatado.
     </div>
     <div>
       <p>
-        Este é um parágrafo dentro de uma divisória.
+        Este &eacute; um par&aacute;grafo dentro de uma divis&oacute;ria.
       </p>
     </div>
   </body>
