--- a/test11.html
+++ b/test11.html
@@ -9,12 +9,12 @@
       <ul>
         <li>
           <a>
-            Html semântico item 1
+            Html sem&acirc;ntico item 1
           </a>
         </li>
         <li>
           <a>
-            Html semântico item 2
+            Html sem&acirc;ntico item 2
           </a>
         </li>
       </ul>
@@ -22,7 +22,7 @@
     <main>
       <section>
         <h2>
-          Seção principal do html
+          Se&ccedil;&atilde;o principal do html
         </h2>
         <article>
           <h3>
@@ -46,14 +46,14 @@
           Barra Lateral
         </h2>
         <p>
-          Anuncio 1
+          An&uacute;ncio 1
         </p>
         <p>
-          Anuncio 2
+          An&uacute;ncio 2
         </p>
         <blockquote>
           <p>
-            “A imaginação é mais importante que o conhecimento.”
+            “A imagina&ccedil;&atilde;o &eacute; mais importante que o conhecimento.”
           </p>
           <cite>
             Albert Einstein
@@ -69,17 +69,17 @@
         </blockquote>
         <details>
           <summary>
-            Mais informações
+            Mais informa&ccedil;&otilde;es
           </summary>
           <a>
-            Informações adicionais
+            Informa&ccedil;&otilde;es adicionais
           </a>
         </details>
       </aside>
     </main>
     <footer>
       <p>
-        &copy; 2024 Exemplos de Tags Semânticas
+        &copy; 2024 Exemplos de Tags Sem&acirc;nticas
       </p>
     </footer>
   </body>
