--- a/test2.html
+++ b/test2.html
@@ -7,15 +7,15 @@
   <body>
     <div>
       <p>
-        Este é um parágrafo dentro de uma div.
+        Este &eacute; um par&aacute;grafo dentro de uma div.
       </p>
     </div>
     <div>
       <p>
-        Outro parágrafo dentro de outra div.
+        Outro par&aacute;grafo dentro de outra div.
       </p>
     </div>
     <div>
-      Este é um texto dentro de uma div adicional que não foi fechada.
+      Este &eacute; um texto dentro de uma div adicional que n&atilde;o foi fechada.
   </body>
 </html>
