--- a/test3.html
+++ b/test3.html
@@ -7,11 +7,11 @@
   <body>
     <div>
       <p>
-        Este é um parágrafo dentro de uma divisória.
+        Este &eacute; um par&aacute;grafo dentro de uma divis&oacute;ria.
       </p>
     </div>
     <div>
-      Este é um texto dentro de outra divisória.
+      Este &eacute; um texto dentro de outra divis&oacute;ria.
     </p>
     </div>
   </body>
