--- a/test7.html
+++ b/test7.html
@@ -7,7 +7,7 @@
   <body>
     <div>
       <p>
-        Este é um parágrafo dentro de uma divisória.
+        Este &eacute; um par&aacute;grafo dentro de uma divis&oacute;ria.
       </p>
     </div>
     <div>
@@ -24,7 +24,7 @@
                           <div>
                             <div>
                               <p>
-                                Esse parágrafo está na camada 16, html corretamente estruturado
+                                Esse par&aacute;grafo est&aacute; na camada 16, html corretamente estruturado
                               </p>
                             </div>
                           </div>
