--- a/test8.html
+++ b/test8.html
@@ -45,7 +45,7 @@
       </a>
     </div>
     <div>
-      Este é um texto dentro de outra divisória.
+      Este &eacute; um texto dentro de outra divis&oacute;ria.
     </div>
   </body>
 </html>
