--- a/test9.html
+++ b/test9.html
@@ -7,12 +7,12 @@
   <body>
     <div>
       <p>
-        Este é um parágrafo dentro de uma divisória.
+        Este &eacute; um par&aacute;grafo dentro de uma divis&oacute;ria.
       </p>
     </div>
     <div>
       <elefante>
-        tag que não existe no html
+        tag que n&atilde;o existe no html
       </elefante>
     </div>
     <p>
