--- a/test10.html
+++ b/test10.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div>
-      Este é um exemplo de HTML mal formatado, pois tem tags interpoladas incorretamente.
+      Este &eacute; um exemplo de HTML mal formatado, pois tem tags interpoladas incorretamente.
     <span>
     </div>
     </span>
