--- a/test4.html
+++ b/test4.html
@@ -7,12 +7,12 @@
   <body>
     <div>
       <p>
-        Este é um parágrafo dentro de uma divisória.
+        Este &eacute; um par&aacute;grafo dentro de uma divis&oacute;ria.
       </p>
     </div>
     <div>
       <p>
-        Outro parágrafo dentro de outra divisória.
+        Outro par&aacute;grafo dentro de outra divis&oacute;ria.
       </p>
     </div>
   </body>
