--- a/test6.html
+++ b/test6.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <div>
-      Este é um exemplo de HTML mal formado.
+      Este &eacute; um exemplo de HTML mal formado.
     </div>
     <div>
       <p>
-        Este é um parágrafo dentro de uma divisória.
+        Este &eacute; um par&aacute;grafo dentro de uma divis&oacute;ria.
       </p>
     </div>
   </body>
