fix: html text correction

--- a/test18.html
+++ b/test18.html
@@ -16,7 +16,7 @@
         </div>
       </div>
       <div>
-        div com 4 niveis de produndidade
+        div com 4 niveis de profundidade
         div em branco acima está com 7 niveis
       </div>
     </div>
